Add use dependencies